[project]
name = "minicache"
version = "0.1.0"
description = "anycache-spirit single-file disk cache: cloudpickle + gzip + arg blacklist + explicit state."
requires-python = ">=3.10"
dependencies = [
    "cloudpickle>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minicache"]
